fix gap and rename buttons

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -5,9 +5,10 @@ body {
 
 .request {
   width: auto;
-  height: 14rem;
-  padding-top: 3rem;
+  height: 15rem;
+  padding-top: 4rem;
   padding-bottom: 9rem;
+  margin-top: -1rem;
   background-color: #ff3300;
 }
 .help {
